<resources>
    <string name="app_name">SIS TZ 2.0.6b</string>
    <string name="action_settings1">@string/str_s_tv1</string>
    <string name="action_settings2">@string/str_s_tv2</string>
    <string name="action_settings4">@string/str_s_tv3</string>
    <string name="action_settings5">@string/str_s_tv7</string>
    <string name="action_settings6">@string/str_s_tv4</string>
    <string name="action_settings7">Backup web</string>
    <string name="action_settings3">Restore web</string>
    <string name="action_settings8">@string/str_s_tv5</string>
    <string name="action_settings9">@string/str_s_tv6</string>
    <string name="action_settings10">@string/str_s_tv10</string>
    <string name="SIS">School Information System 2.0.6b</string>
    <string name="pp">Pre-Primary</string>
    <string name="p">Primary</string>
    <string name="s">Secondary</string>
    <string name="synchronizing">The School Information System has been updated to include new regions, districts, and/or wards. The geographic database is being updated now on your tablet. This may take up to 30 seconds and the screen may go blank. Press OK to continue.</string>
    <string name="str_g_sick">Sick</string>
    <string name="str_g_excused">Excused</string>
    <string name="str_g_unexcused">Unexcused</string>
    <string name="str_g_total_absence">Total absence</string>
    <string name="str_g_class_disruption">Class Disruption</string>
    <string name="str_g_detention">Detention</string>
    <string name="str_g_in_school_suspension">In School Suspension</string>
    <string name="str_g_out_of_school_suspension">Out of School Suspension</string>
    <string-array name="reason_absence">
        <item>@string/str_g_selectone</item>
        <item>@string/str_g_sick</item>
        <item>@string/str_g_excused</item>
        <item>@string/str_g_unexcused</item>
        
    </string-array>
    <string-array name="behaviour">
        <item>@string/str_g_selectone</item>
        <item>@string/str_g_class_disruption</item>
        <item>@string/str_g_detention</item>
        <item>@string/str_g_in_school_suspension</item>
        <item>@string/str_g_out_of_school_suspension</item>
        
        
        
        
        
        
        
        
        
        
        
    </string-array>
    <string-array name="test">
        <item>@string/str_g_selectone</item>
        <item>@string/str_gtest_1</item>
        <item>@string/str_gtest_2</item>
        <item>@string/str_gtest_3</item>
        <item>@string/str_gtest_4</item>
        <item>@string/str_gtest_5</item>
        <item>@string/str_gtest_6</item>
        <item>@string/str_gtest_7</item>
        <item>@string/str_gtest_8</item>
        <item>@string/str_gtest_9</item>
        <item>@string/str_gtest_10</item>
        <item>@string/str_gtest_11</item>
        <item>@string/str_gtest_12</item>
    </string-array>
    <string name="album_name">SisTZ</string>
    <string name="cannot">Cannot</string>
    <string name="str_w_a">Enter school\'s EMIS code</string>
    <string name="str_w_b">Enter school\'s name</string>
    <string name="str_w_c">What levels do you have in the morning shift?</string>
    <string name="str_w_d">What levels do you have in the afternoon shift?</string>
    <string name="str_w_e">What levels do you have in the evening shift?</string>
    <string name="str_w_f">The information required</string>
    <string name="str_w_f1">to begin has been entered.</string>
    <string name="str_w_g">Do you wish to proceed?</string>
    <string name="str_w_h">(You can go back to make changes before proceeding)</string>
    <string name="str_w_back">Back</string>
    <string name="str_w_next">Next</string>
    <string name="str_w_saveandstart">   Save and Start</string>
    <string name="str_w_alredyinfo">This EMIS school code already has information</string>
    <string name="str_m_tv1">Baseline</string>
    <string name="str_m_tv2">Daily Classroom</string>
    <string name="str_m_tv3">Reports</string>
    <string name="str_m_tv4">School Characteristics</string>
    <string name="str_m_tv5">Teachers</string>
    <string name="str_m_tv6">Students</string>
    <string name="str_m_tv7">Attendance</string>
    <string name="str_m_tv8">Behaviour</string>
    <string name="str_m_tv9">Evaluation</string>
    <string name="str_m_tv10">Finance</string>
    <string name="str_m_tv11">Capitation Grants</string>
    <string name="str_s_tv1">School settings</string>
    <string name="str_s_tv11">School EMIS Code</string>
    <string name="str_s_tv12">School Name</string>
    <string name="str_s_tv13">Shifts and Levels</string>
    <string name="str_s_tv14">Morning</string>
    <string name="str_s_tv15">Afternoon</string>
    <string name="str_s_tv16">Evening</string>
    <string name="str_s_tv2">Administrator settings</string>
    <string name="str_s_tv21">Administrator password</string>
    <string name="str_s_tv22">Server Tablet number</string>
    <string name="str_s_tv23">Server IP or URL</string>
    <string name="str_s_tv3">Search for updates ...</string>
    <string name="str_s_tv4">Backup</string>
    <string name="str_s_tv5">Restore</string>
    <string name="str_s_tv6">Language</string>
    <string name="str_s_tv7">About SIS</string>
    <string name="str_s_tv10">Initialize database</string>
    <string name="str_s_tv8">Automatic promotion</string>
    <string name="str_bl_0"> 1. School Profile and Particulars</string>
    <string name="str_bl_1">1. EMIS Code</string>
    <string name="str_bl_2">2. School name</string>
    <string name="str_bl_3">3. Location</string>
    <string name="str_region">Region</string>
    <string name="str_council">District</string>
    <string name="str_ward">Ward</string>
    <string name="str_bl_4">Zone</string>
    <string name="str_rural">Rural</string>
    <string name="str_urban">Urban</string>
    <string name="str_bl_5">4. Contact mobile number</string>
    <string name="str_bl_6">5. Contact E-mail address</string>
    <string name="str_bl_7">6. NECTA (Secondary Only) code Form 4</string>
    <string name="str_bl_8">7. NECTA (Secondary Only) code Form 6</string>
    <string name="str_bl_9">6. Type of school</string>
    <string name="str_bl_9a">Goverment</string>
    <string name="str_bl_9b">Private</string>
    <string name="str_bl_9c">Community/Ward</string>
    <string name="str_bl_9d">Religious</string>
    <string name="str_bl_9e">Other</string>
    <string name="str_bl_10">7. School Registration Number</string>
    <string name="str_bl_11">8. Year of Establishment</string>
    <string name="str_bl_12">9. School GPS Coordinates</string>
    <string name="str_bl_12a">Start Record Location</string>
    <string name="str_bl_12b">No coordinates available...</string>
    <string name="str_bl_12c">Stop Record Location</string>
    <string name="str_bl_13">10. Schools Pictures</string>
    <string name="str_bl_msj1">Important</string>
    <string name="str_bl_msj2">Are you sure you want to save?</string>
    <string name="str_bl_msj3">Confirm</string>
    <string name="str_bl_msj4">Cancel</string>
    <string name="str_bl_msj5">The information has been updated.</string>
    <string name="str_bl_msj6">You must enter Geographical position.</string>
    <string name="str_bl2_a">2. Pre-primary Classroom</string>
    <string name="str_bl2_b">Classrooms</string>
    <string name="str_bl2_c">Write the NUMBER OF CLASSROOMS used by Pre-Primary Education Only (rooms used for instruction; excludes office, staff room, and storage) by construction type.</string>
    <string name="str_bl2_d">1. Solid</string>
    <string name="str_bl2_e">Built with cement blocks</string>
    <string name="str_bl2_f">2. Semi-solid</string>
    <string name="str_bl2_g">Built largely with mud/burnt bricks</string>
    <string name="str_bl2_h">3. Makeshift</string>
    <string name="str_bl2_i">Temporary made of materials, such as mat and sticks</string>
    <string name="str_bl2_j">4. Partitioned</string>
    <string name="str_bl2_k">Rooms divided into parts as classrooms</string>
    <string name="str_bl2_l">5. Open-air / under the tree</string>
    <string name="str_bl2_m">6. Other</string>
    <string name="str_bl2_n">Any other space used as a classroom</string>
    <string name="str_bl2_o">Classrooms furniture totals</string>
    <string name="str_bl2_p">Write the number for each type of furniture used by Pre-Primary Education only.</string>
    <string name="str_bl2_q">1. Chairs</string>
    <string name="str_bl2_r">2. Desks single seater</string>
    <string name="str_bl2_s">3. Desks 2 seater</string>
    <string name="str_bl2_t">4. Desks 3 seater</string>
    <string name="str_bl2_u">5. Benches single seater</string>
    <string name="str_bl2_v">6. Benches 2 seater</string>
    <string name="str_bl2_w">7. Benches 3 seater</string>
    <string name="str_bl2_x">8. Chalkboard</string>
    <string name="str_bl2_msj1">You must enter at least one record.</string>
    <string name="str_bl3_a">3. Primary Curriculum and Instruction</string>
    <string name="str_bl3_b">National Curriculum</string>
    <string name="str_bl3_c">1. Does your school have a national curriculum?</string>
    <string name="str_bl3_d">2. How many copies of the national curriculum do you have? Write the number</string>
    <string name="str_bl3_e">Write the number of textbooks (include only those that are usable) by grade and subject.</string>
    <string name="str_bl3_f">1. Mathematics (M)</string>
    <string name="str_bl3_g">2. English (LA)</string>
    <string name="str_bl3_h">3. Kiswahili (LA)</string>
    <string name="str_bl3_i">4. French (LA)</string>
    <string name="str_bl3_j">5. Science (S)</string>
    <string name="str_bl3_k">6. Geography (SS)</string>
    <string name="str_bl3_l">7. Civics (SS)</string>
    <string name="str_bl3_m">8. History (SS)</string>
    <string name="str_bl3_n">9. Vocational skills (O)</string>
    <string name="str_bl3_o">10. Personality and Sports (O)</string>
    <string name="str_bl3_p">11. ICT (O)</string>
    <string name="str_bl3_p1">12. Religion Studies</string>
    <string name="str_bl3_p2">13. Reading</string>
    <string name="str_bl3_p3">14. Writing</string>
    <string name="str_bl3_p4">15. Artithmetic</string>
    <string name="str_bl3_p5">16. Health and Environment Education</string>
    <string name="str_bl3_p6">17. Games, Sports and Fine and Performing Art</string>
    <string name="str_bl3_q">18. Other</string>
    <string name="str_bl3_r">19. How often do your students use the textbooks in the classroom?</string>
    <string name="str_bl3_s">Language Arts (LA)</string>
    <string name="str_bl3_t">Mathematics (M)</string>
    <string name="str_bl3_u">Sciences (S)</string>
    <string name="str_bl3_v">Social Studies (SS)</string>
    <string name="str_bl3_w">Other (O)</string>
    <string name="str_bl3_x">20. Do you have a safe location to store the textbooks?</string>
    <string name="str_bl3_y">Any other textbooks that are not included in the list above</string>
    <string name="str_bl3_1">Std. I</string>
    <string name="str_bl3_2">Std. II</string>
    <string name="str_bl3_3">Std. III</string>
    <string name="str_bl3_4">Std. IV</string>
    <string name="str_bl3_5">Std. V</string>
    <string name="str_bl3_6">Std. VI</string>
    <string name="str_bl3_7">Std. VII</string>
    <string name="str_bl4_a">4. Primary Classroom Characteristics and Furniture</string>
    <string name="str_g_year">Year</string>
    <string name="str_g_shift">Shift</string>
    <string name="str_g_level">Level</string>
    <string name="str_g_grade">Grade</string>
    <string name="str_g_stream">Stream</string>
    <string name="str_sa_a"> 2. Enrollment </string>
    <string name="str_sa_b">Grade Assignment</string>
    <string name="str_sa_c">Repeater</string>
    <string name="str_sa_d">New Entrant</string>
    <string name="str_sa_e">New Entrant with PRE-PRI</string>
</resources>