<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:Android="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@drawable/save_line"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/tv_groupIndicator"
                android:textColor="#ffffff"
                android:textSize="22dp"
                android:text="@string/str_sa_a"
                android:textStyle="bold"
                android:layout_weight=".95"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp" />

            <LinearLayout
                android:layout_width="218dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="4"
                android:paddingBottom="7dp"
                android:background="@drawable/save_line"
                android:gravity="right">

                <View
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="3.5"/>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/add_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"

                    android:src="@drawable/add"
                    app:backgroundTint="#a0a0a0" />

                <View
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight=".2"/>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/erase_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_gravity="bottom|end"

                    android:src="@drawable/trash"
                    app:backgroundTint="#a0a0a0" />

                <View
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight=".2"/>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/save_reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"


                    android:layout_gravity="bottom|end"

                    android:src="@drawable/save2"
                    app:backgroundTint="#a0a0a0" />

            </LinearLayout>

        </LinearLayout>

        <!--************* PART 1 ************-->
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/fl_part1"
            android:layout_weight=".355"
            android:transitionGroup="false">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".345"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lv_list" />

            <!-- 1. EMIS CODE-->

            <!-- 2. NAME-->



        </LinearLayout>

        </FrameLayout>

        <!--************* PART 2 ************-->
        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:id="@+id/fl_part2"
            android:layout_weight=".365">


            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight=".345"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">


                    <!-- 2. NAME-->


                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:weightSum=".5"
                        android:layout_weight=".5"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="50dp"
                        android:layout_marginBottom="30dp">

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/str_sa_b"
                            android:layout_weight=".2"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:textStyle="bold"
                            android:textColor="#000000"
                            android:textSize="25dp"
                            android:id="@+id/textView87"
                            android:layout_marginBottom="20dp" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/str_g_shift"
                            android:layout_weight=".2"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:textStyle="bold"
                            android:textColor="#4b4b4b"
                            android:textSize="20dp" />

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/sp_shift"
                            android:background="@drawable/util_spinner"
                            android:layout_margin="5dp" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/str_g_level"
                            android:layout_weight=".2"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:textStyle="bold"
                            android:textColor="#4b4b4b"
                            android:textSize="20dp"
                            android:layout_marginTop="5dp" />

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/sp_level"
                            android:layout_weight=".25"
                            android:background="@drawable/util_spinner"
                            android:layout_margin="5dp" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/str_g_grade"
                            android:layout_weight=".1"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:textStyle="bold"
                            android:textColor="#4b4b4b"
                            android:textSize="20dp"
                            android:layout_marginTop="5dp" />

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/sp_grade"
                            android:layout_weight=".25"
                            android:background="@drawable/util_spinner"
                            android:layout_margin="5dp" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/str_g_stream"
                            android:layout_weight=".15"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:textStyle="bold"
                            android:textColor="#4b4b4b"
                            android:textSize="20dp"
                            android:layout_marginTop="5dp" />

                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/sp_section"
                            android:layout_weight=".25"
                            android:background="@drawable/util_spinner"
                            android:layout_margin="5dp" />

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/str_sa_c"
                                android:id="@+id/cb_repeater"
                                android:textSize="25dp"
                                android:textColor="#4b4b4b"
                                android:paddingLeft="10dp"
                                android:layout_marginTop="20dp" />
                            <RadioButton
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/str_sa_d"
                                android:id="@+id/cb_new_entrant"
                                android:textSize="25dp"
                                android:textColor="#4b4b4b"
                                android:paddingLeft="10dp"
                                android:checked="false" />
                        </RadioGroup>


                        <CheckBox
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/str_sa_e"
                            android:id="@+id/cb_new_entrant_pre_pri"
                            android:textSize="25dp"
                            android:textColor="#4b4b4b"
                            android:paddingLeft="10dp"
                            android:checked="false"
                            android:visibility="invisible" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="7dp">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:weightSum="1"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/str_g_year"
                                android:layout_weight=".2"
                                android:textStyle="bold"
                                android:textColor="#4b4b4b"
                                android:textSize="20dp" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/str_g_shift"
                                android:layout_weight=".2"
                                android:textStyle="bold"
                                android:textColor="#4b4b4b"
                                android:textSize="20dp"
                                android:id="@+id/textView29" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/str_g_level"
                                android:layout_weight=".2"
                                android:textStyle="bold"
                                android:textColor="#4b4b4b"
                                android:textSize="20dp" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/str_g_grade"
                                android:layout_weight=".155"
                                android:textStyle="bold"
                                android:textColor="#4b4b4b"
                                android:textSize="20dp" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/str_g_stream"
                                android:layout_weight=".15"
                                android:textStyle="bold"
                                android:textColor="#4b4b4b"
                                android:textSize="20dp" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="1dp"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:layout_weight=".25"
                            android:textStyle="bold"
                            android:textColor="#aaaaaa"
                            android:textSize="16dp"
                            android:background="#858585" />

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="100dp">

                            <ListView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/lv_subject_student"
                                android:paddingTop="5dp" />
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </FrameLayout>


    </LinearLayout>
</LinearLayout>